// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`W3NCreateInfo should match the snapshot for off-chain did 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      web3name
    </h1>
    <p
      class="subline"
    >
      Connect a web3name to your on-chain DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <p
      class="info"
    >
      Web3names are user-friendly names built on top of the KILT blockchain. With your on-chain DID, you can claim this alias which makes it easier for others to reference your identity, without the need to triple-check the DID’s long sequence of characters.
    </p>
    <p
      class="warning"
    >
      You need an on-chain DID to use this feature.
    </p>
    <p
      class="buttonsLine"
    >
      <button
        class="back"
        type="button"
      >
        Back
      </button>
      <a
        class="next"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade"
      >
        Upgrade to on-chain DID
      </a>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`W3NCreateInfo should match the snapshot for on-chain did 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      web3name
    </h1>
    <p
      class="subline"
    >
      Connect a web3name to your on-chain DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar fullDid"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with on-chain DID and lots of coins
        </span>
      </div>
    </section>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4oeJ76hdj84xnwCNqijUHUCTmfwXgSZ4vmxLEiTEYgQdBCcZ"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="info"
    >
      Web3names are user-friendly names built on top of the KILT blockchain. With your on-chain DID, you can claim this alias which makes it easier for others to reference your identity, without the need to triple-check the DID’s long sequence of characters.
    </p>
    <p
      class="promoLine"
    >
      <label>
        <input
          class="promo"
          type="checkbox"
        />
        <span />
        Use web3name Promo and accept 
      </label>
      <a
        class="terms"
        href="https://www.trusted-entity.io/assets/pdf/web3namePromo_Terms_2022.pdf"
        rel="noreferrer"
        target="_blank"
      >
        Terms
      </a>
    </p>
    <p
      class="buttonsLine"
    >
      <button
        class="back"
        type="button"
      >
        Back
      </button>
      <a
        class="next"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/did/web3name/create/form"
      >
        Next Step
      </a>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
